refactor: update dependencies and improve code readability
- Changed the artifactId for Quarkus JUnit dependency from `quarkus-junit5` to `quarkus-junit`.
- Replaced `List.collect(Collectors.toList())` with `toList()` for better readability in multiple resource classes.
- Introduced a new utility class `HibernateSessions` to handle unwrapping of `EntityManager` to `Session`.
- Updated application properties to use `schema-management.strategy` instead of `database.generation`.
- Added new tab components (`tabs`, `tabs-content`, `tabs-list`, `tabs-trigger`) to the frontend for improved UI structure.