@@ -14,8 +14,6 @@ import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/api/contacts")
 @Consumes(MediaType.APPLICATION_JSON)
@@ -27,9 +25,9 @@ public class ContactResource {
 
     @GET
     public Response list() {
-        List<ContactResponse> body = contactUseCase.list().stream()
+        var body = contactUseCase.list().stream()
                 .map(c -> new ContactResponse(c.getId(), c.getName(), c.getPhone(), c.getEmail()))
-                .collect(Collectors.toList());
+                .toList();
         return Response.ok(body).build();
     }
 
